--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
 	],
 	"require": {
 		"php": "^7.4||^8.0",
-		"typo3/cms-core": "^10.4.6||^11.1"
+		"typo3/cms-core": "^10.4.6 || ^11.1 || ^12.0"
 	},
 	"replace": {
 		"typo3-ter/autoloader": "self.version"
